tests/ui/type-alias-impl-trait/hkl_forbidden.stderr
error[E0792]: expected generic lifetime parameter, found `'_`
  --> $DIR/hkl_forbidden.rs:11:5
   |
LL | type Opaque<'a> = impl Sized + 'a;
   |             -- this generic parameter must be used with a generic lifetime parameter
...
LL |     (id, id)
   |     ^^^^^^^^

error[E0792]: expected generic lifetime parameter, found `'a`
  --> $DIR/hkl_forbidden.rs:22:5
   |
LL | type Opaque2<'a> = impl Sized + 'a;
   |              -- this generic parameter must be used with a generic lifetime parameter
...
LL |     id2
   |     ^^^

error[E0792]: expected generic lifetime parameter, found `'_`
  --> $DIR/hkl_forbidden.rs:29:5
   |
LL | type Opaque3<'a> = impl Sized + 'a;
   |              -- this generic parameter must be used with a generic lifetime parameter
...
LL |     (id, s)
   |     ^^^^^^^

error[E0792]: expected generic lifetime parameter, found `'_`
  --> $DIR/hkl_forbidden.rs:35:5
   |
LL | type Opaque4<'a> = impl Sized + 'a;
   |              -- this generic parameter must be used with a generic lifetime parameter
...
LL |     (s, id)
   |     ^^^^^^^

error[E0792]: expected generic lifetime parameter, found `'a`
  --> $DIR/hkl_forbidden.rs:41:5
   |
LL | type Inner<'a> = impl Sized;
   |            -- this generic parameter must be used with a generic lifetime parameter
...
LL |     |x| x
   |     ^^^^^

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0792`.
